<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/rag_fragment_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/picture_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/picture_count"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/picture_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="0"
        android:fontFamily="sans-serif-thin"
        app:layout_constraintTop_toTopOf="@id/picture_count_label"
        app:layout_constraintLeft_toLeftOf="@id/images_per_sec_count"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        />

    <TextView
        android:id="@+id/images_per_sec_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/images_per_second"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/picture_count_label"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/images_per_sec_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="0"
        android:fontFamily="sans-serif-thin"
        app:layout_constraintTop_toTopOf="@id/images_per_sec_label"
        app:layout_constraintLeft_toRightOf="@id/images_per_sec_label"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        />

    <TextView
        android:id="@+id/ip_address_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ip_address_label"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/images_per_sec_count"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <EditText
        android:id="@+id/ip_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text=""
        android:hint="@string/image_capture_server_ip"
        android:fontFamily="sans-serif-thin"
        app:layout_constraintTop_toBottomOf="@id/ip_address_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        />

    <ImageButton
        android:id="@+id/picture_start_stop"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="48dp"
        android:src="@drawable/ic_play_arrow_24px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>